--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Base of Spades</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="main-container">
+        <h1>Base of Spades</h1>
+        <p>Are you ready to play your cards?</p>
+        <button onclick="showMessage()">Reveal Destiny</button>
+        <p id="message"></p>
+    </div>
+
+    <script src="scripts.js"></script>
+</body>
+</html>
 
