--- a/index.html
+++ b/index.html
@@ -3,18 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base of Spades</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>3D Rotating Card</title>
+    <style>
+        body { margin: 0; height: 100vh; display: flex; justify-content: center; align-items: center; background: #000; }
+        #card3D { width: 100%; height: 100%; }
+    </style>
 </head>
 <body>
-    <div class="main-container">
-        <h1>Base of Spades</h1>
-        <p>Are you ready to play your cards?</p>
-        <button onclick="showMessage()">Reveal Destiny</button>
-        <p id="message"></p>
-    </div>
+    <div id="card3D"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script>
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 
-    <script src="scripts.js"></script>
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.getElementById('card3D').appendChild(renderer.domElement);
+
+        const loader = new THREE.TextureLoader();
+        const textureFront = loader.load('path/to/your/front-image.jpg');
+        const textureBack = loader.load('path/to/your/back-image.jpg');
+
+        const geometry = new THREE.BoxGeometry(2, 3, 0.1);
+        const materialFront = new THREE.MeshBasicMaterial({ map: textureFront });
+        const materialBack = new THREE.MeshBasicMaterial({ map: textureBack });
+        const materials = [
+            new THREE.MeshBasicMaterial({ color: 0x333333 }), // side colors
+            new THREE.MeshBasicMaterial({ color: 0x333333 }),
+            new THREE.MeshBasicMaterial({ color: 0x333333 }),
+            new THREE.MeshBasicMaterial({ color: 0x333333 }),
+            materialFront,
+            materialBack
+        ];
+        const card = new THREE.Mesh(geometry, materials);
+        scene.add(card);
+        camera.position.z = 5;
+
+        function animate() {
+            requestAnimationFrame(animate);
+            card.rotation.y += 0.01;
+            renderer.render(scene, camera);
+        }
+        animate();
+    </script>
 </body>
 </html>
-
