--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Rotating Card</title>
+    <title>Base of Spades</title>
     <style>
         body { margin: 0; height: 100vh; display: flex; justify-content: center; align-items: center; background: #000; }
         #card3D { width: 100%; height: 100%; }
