--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div id="card3D"></div>
+<div class="content">
     <h1 class="glow">Base of Spades</h1>
-    <button class="glow" onclick="window.location='https://t.me/yourTelegramLink';">Play Your Hand</button>
+    <div class="button-container">
+        <button class="glow" onclick="window.location='https://t.me/yourTelegramLink';">Play Your Hand</button>
+    </div>
     <div class="divider"></div>
     <div class="links">
         <a href="https://dextools.io" class="glow">DexTools</a>
@@ -18,6 +21,10 @@
         <a href="https://example.com" class="glow">X</a>
         <a href="https://t.me/yourTelegramLink" class="glow">Telegram</a>
     </div>
+    <div class="footer">
+        <p>Disclaimer: The "Base of Spades" is a conceptual digital asset and should not be considered an investment. Do not invest with the expectation of financial gain. Always do your own research.</p>
+    </div>
+</div>
     <div class="footer">
         <p>Disclaimer: The "Base of Spades" is a conceptual digital asset and should not be considered an investment. Do not invest with the expectation of financial gain. Always do your own research.</p>
     </div>
