--- a/index.html
+++ b/index.html
@@ -4,27 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base of Spades</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body { margin: 0; height: 100vh; display: flex; justify-content: center; align-items: center; background: #000; }
+        #card3D { width: 100%; height: 100%; }
+    </style>
 </head>
 <body>
     <div id="card3D"></div>
-    <div class="content">
-        <h1 class="glow">Base of Spades</h1>
-        <div class="button-container">
-            <button class="glow" onclick="window.location='https://t.me/yourTelegramLink';">Play Your Hand</button>
-        </div>
-        <div class="divider"></div>
-        <div class="links">
-            <a href="https://dextools.io" class="glow">DexTools</a>
-            <a href="https://dexscreener.com" class="glow">DexScreener</a>
-            <a href="https://moontok.com" class="glow">Moontok</a>
-            <a href="https://example.com" class="glow">X</a>
-            <a href="https://t.me/yourTelegramLink" class="glow">Telegram</a>
-        </div>
-        <div class="footer">
-            <p>Disclaimer: The "Base of Spades" is a conceptual digital asset and should not be considered an investment. Do not invest with the expectation of financial gain. Always do your own research.</p>
-        </div>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
         const scene = new THREE.Scene();
@@ -62,4 +48,3 @@
     </script>
 </body>
 </html>
-
