--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base of Spades</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
     <style>
         body { margin: 0; height: 100vh; display: flex; justify-content: center; align-items: center; background: #000; }
-        #card3D { width: 100%; height: 100%; }
+        #card3D { width: 100%; height: 80%; position: absolute; top: 10%; }
+        #baseText {
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            color: white;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 24px;
+            bottom: 10%;
+        }
     </style>
 </head>
 <body>
     <div id="card3D"></div>
+    <div id="baseText">Base of Spades</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
         const scene = new THREE.Scene();
