--- a/index.html
+++ b/index.html
@@ -5,57 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base of Spades</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-    <style>
-        body { margin: 0; height: 100vh; display: flex; justify-content: center; align-items: center; background: #000; }
-        #card3D { width: 100%; height: 80%; position: absolute; top: 10%; }
-        #baseText {
-            position: absolute;
-            width: 100%;
-            text-align: center;
-            color: white;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 24px;
-            bottom: 10%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="card3D"></div>
     <div id="baseText">Base of Spades</div>
+    <div id="playButton"><a href="https://t.me/yourTelegramLinkHere">Play your hand</a></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script>
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.getElementById('card3D').appendChild(renderer.domElement);
-
-        const loader = new THREE.TextureLoader();
-        const textureFront = loader.load('cardfront.png');
-        const textureBack = loader.load('cardback.png');
-
-        const geometry = new THREE.BoxGeometry(2, 3, 0.1);
-        const materialFront = new THREE.MeshBasicMaterial({ map: textureFront });
-        const materialBack = new THREE.MeshBasicMaterial({ map: textureBack });
-        const materials = [
-            new THREE.MeshBasicMaterial({ color: 0x333333 }), // side colors
-            new THREE.MeshBasicMaterial({ color: 0x333333 }),
-            new THREE.MeshBasicMaterial({ color: 0x333333 }),
-            new THREE.MeshBasicMaterial({ color: 0x333333 }),
-            materialFront,
-            materialBack
-        ];
-        const card = new THREE.Mesh(geometry, materials);
-        scene.add(card);
-        camera.position.z = 5;
-
-        function animate() {
-            requestAnimationFrame(animate);
-            card.rotation.y += 0.01;
-            renderer.render(scene, camera);
-        }
-        animate();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
