--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div id="card3D"></div>
-    <div id="baseText">Base of Spades</div>
-    <div id="playButton"><a href="https://t.me/yourTelegramLinkHere">Play your hand</a></div>
+    <div id="playButton"><a href="https://t.me/">Play your hand</a></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="script.js"></script>
 </body>
